Bug 42720 - Subwoofer in ASUS G73 does not work
Summary: Subwoofer in ASUS G73 does not work
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Sound(ALSA) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Jaroslav Kysela
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-02 22:49 UTC by Rudd-O DragonFear
Modified: 2012-08-30 14:26 UTC (History)
2 users (show)

See Also:
Kernel Version: 3.3-rc2
Subsystem:
Regression: No
Bisected commit-id:


Attachments
ALSA info for this machine (43.41 KB, text/plain)
2012-02-03 12:27 UTC, Rudd-O DragonFear
Details
Fix patch (1.24 KB, patch)
2012-02-03 13:33 UTC, Takashi Iwai
Details | Diff

Description Rudd-O DragonFear 2012-02-02 22:49:09 UTC
As per the bug report here:

https://bugzilla.redhat.com/show_bug.cgi?id=786243

and the bug report here:

https://bugs.launchpad.net/ubuntu/+source/linux/+bug/728161

the latest vanilla torvalds kernel 3.3-rc2 does not enable the subwoofer in the ASUS laptops.  Apparently, the work done by ALSA developers has not been upstreamed for some reason.  I am referring specifically to this code:

https://launchpad.net/~diwic/+archive/dkms/+builds?build_state=built

Of course this code no longer works with kernel 3.2 onwards.  Thus, me filing this bug -- I can't use David's workaround anymore.
Comment 1 Rudd-O DragonFear 2012-02-03 01:25:21 UTC
OK, upon further inspection, David's workaround has been partially upstreamed.  The Bass Speaker has a separate volume control now.  That causes an obvious problem -- changing the Master volume control does not affect at all the volume of the Bass Speaker.

I have upstreamed this bug to the ALSA bug tracker, where I'm sure it will die a slow death. :-D

https://bugtrack.alsa-project.org/alsa-bug/view.php?id=5526
Comment 2 Takashi Iwai 2012-02-03 11:09:45 UTC
Could you give alsa-info.sh output (run with --no-upload option) to this bugzilla?

I don't know which tree you are referring to as "upstream".  Could you be specific?
Comment 3 Rudd-O DragonFear 2012-02-03 12:26:58 UTC
Hey Takashi, sure!
Comment 4 Rudd-O DragonFear 2012-02-03 12:27:19 UTC
Created attachment 72253 [details]
ALSA info for this machine
Comment 5 Rudd-O DragonFear 2012-02-03 12:27:57 UTC
Upstream refers to the alsa project itself, as I understand the kernel periodically merges their work into the mainline.
Comment 6 Takashi Iwai 2012-02-03 13:32:27 UTC
Thanks, I fixed it in the upstream sound git tree.
    git://git.kernel.org/pub/scm/linux/kernel/git/tiwai/sound.git

Found in commit b544d1e0e233f83a2e6d20ee96b54ea272d5d5ba, 
    ALSA: hda/realtek - Add missing Bass and CLFE as vmaster slaves

It's slipped from today's pull request to Linus, but I'm going to send a request in the next week for 3.3-rc3.
Comment 7 Takashi Iwai 2012-02-03 13:33:01 UTC
Created attachment 72254 [details]
Fix patch
Comment 8 Rudd-O DragonFear 2012-02-03 13:38:24 UTC
Thanks Takashi!
Comment 9 Rudd-O DragonFear 2012-02-04 19:55:25 UTC
Takashi, your patch works fine, but there is another problem.  Only the LEFT channel of the stereo signal drives the subwoofer -- the right channel does not.

Is this fixable?  I'll do anything to fix that.  I'll even boot windows and see if it works in there.  GASP :-)
Comment 10 Rudd-O DragonFear 2012-02-05 16:13:56 UTC
Sorry.  The patch does not work as I previously stated.  The Bass Speaker slider does not move when I move the Master, nor when I govern the volume of the device using pavucontrol.
Comment 11 Rudd-O DragonFear 2012-02-17 23:06:53 UTC
I will try -rc3 today, hopefully I will report back today if your patch works
Comment 12 Rudd-O DragonFear 2012-02-18 00:05:49 UTC
ok.  This bug is fixed in RC3.

Note You need to log in before you can comment on or make changes to this bug.